--- a/Czech/main/MiSettings.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiSettings.apk/res/values-cs/strings.xml
@@ -80,4 +80,47 @@
     <string name="usagestats_device_timeout_positive">Rozumím</string>
     <string name="usagestats_device_timeout_title">Upozornění na používání</string>
     <string name="app_name">MiSettings</string>
+     <string name="application_sound">Upozornění aplikací</string>
+     <string name="calendar_sound">Upozornění události</string>
+     <string name="calendar_tip">Zvuky upozornění události fungují pro kalendář, poznámky, úlohy, atd.</string>
+     <string name="follow_sim1">Použít nastavení SIM 1</string>
+     <string name="intelligent_recognition_item_summary">Identifikovat příchozí hovor od poskytovatelů služeb (napr. donáška, kurýr) a použít jiné zvonění</string>
+     <string name="intelligent_recognition_item_title">Identifikovat služby</string>
+     <string name="mms">SMS</string>
+     <string name="more_ringtone">Všechna zvonění</string>
+     <string name="notification_sound">Zvuky upozornění</string>
+     <string name="ringtone_slot_setting_title">Duální SIM zvonění</string>
+     <string name="ringtone_sound">Zvonění</string>
+     <string name="ringtone_title">Zvonění</string>
+     <string name="sim_slot_1">" (SIM 1)"</string>
+     <string name="sim_slot_2">" (SIM 2)"</string>
+     <string name="sms_delivered_sound_title">Doručená zpráva</string>
+     <string name="sms_received_sound_title">Přijatá zpráva</string>
+     <string name="thememanager_not_found">Nebylo možné otevřít aplikaci Témata.</string>
+     <string name="usage_state_app">Aplikace</string>
+     <string name="usage_state_app_remain_time">Zůstávající čas: %s</string>
+     <string name="usage_state_app_usage_limit">Limit zobrazení aplikace</string>
+     <string name="usage_state_app_usage_limit_summary">Nastavit denní limit zobrazení aplikace</string>
+     <string name="usage_state_card_add">Přidat</string>
+     <string name="usage_state_card_cancel">Zrušit</string>
+     <string name="usage_state_card_summary">Přidejte kartu \"Čas zobrazení \" do Asistenta.</string>
+     <string name="usage_state_category">Kategorie</string>
+     <string name="usage_state_device_limit_summary">Nastavit denní limit zobrazení pro vaše zařízení</string>
+     <string name="usage_state_device_limit_title">Limity zobrazení</string>
+     <string name="usage_state_remind_new_summary">Upozornit když je dosáhnutý limit zobrazení</string>
+     <string name="usage_state_show_app">Aplikace</string>
+     <string name="usage_state_show_category">Kategorie</string>
+     <string name="usage_state_show_detail">Zobrazit statistiky</string>
+     <string name="usage_state_show_more">Více</string>
+     <string name="usage_state_time_end">Dosáhli jste dnešní limit zobrazení</string>
+     <string name="usage_state_unusage">Dnes nepoužité</string>
+     <string name="usage_state_usage_time_weekday_title">Pracovní dny</string>
+     <string name="usage_state_usage_time_weekend_title">Víkend</string>
+     <string name="usagestats_app_category_miui_education">Vzdělávání</string>
+     <string name="usagestats_app_category_miui_entainment">Zábava</string>
+     <string name="usagestats_app_category_miui_medicine">Zdraví</string>
+     <string name="usagestats_app_category_miui_news">Zprávy</string>
+     <string name="usagestats_app_category_miui_photo">Fotografie a video</string>
+     <string name="usagestats_app_category_miui_sport">Sport a fitness</string>
+     <string name="usagestats_app_category_miui_travel">Cestování</string>	
 </resources>
