--- a/Czech/main/Settings.apk/res/values-cs/strings.xml
+++ b/Czech/main/Settings.apk/res/values-cs/strings.xml
@@ -6027,4 +6027,29 @@ You can view generated logs in File Manager."</string>
   <string name="screen_dark_mode_smart_dark_title">Globální tmavý režim</string>
   <string name="screen_dark_mode_time_title">Naplánovat</string>
   <string name="single_press_AI_button">Stisknutí AI tlačítka</string>
+     <string name="connection_and_sharing">Připojení a sdílení</string>
+     <string name="enable_screen_projection_summary">Přenášet obraz z displeje na monitor</string>
+     <string name="open_game_accelerate">Povolit Zrychlení her</string>
+     <string name="other">Ostatní</string>
+     <string name="screen_projection">Vysílat</string>
+     <string name="screen_projection_characteristics">Speciální funkce</string>
+     <string name="screen_projection_characteristics_off_screen_summary">Můžete vysílat i během vypnutého displeje na vašem telefonu. Tato funkce zmenší spotřebu baterie.</string>
+     <string name="screen_projection_characteristics_off_screen_title">Vysílat s vypnutým displejem</string>
+     <string name="screen_projection_characteristics_privacy_protect_summary">Nezobrazovat vyskakovací okna s upozorněními, příchozí hovory, a jiný soukromý obsah na externím monitoru.</string>
+     <string name="screen_projection_characteristics_privacy_protect_title">Skrýt soukromý obsah</string>
+     <string name="screen_projection_characteristics_small_window_summary">Minimalizovat okno které se vysílá aby jste mohli využívat ostatní funkce vašeho zařízení.</string>
+     <string name="screen_projection_characteristics_small_window_title">Minimalizovat okno</string>
+     <string name="screen_projection_example_document_summary">Zobrazte prezentace na externím monitoru a používejte svůj telefon na posouvání stran a čtení poznámek.</string>
+     <string name="screen_projection_example_document_title">Dokumenty</string>
+     <string name="screen_projection_example_gallery_summary">Stlačte tlačítko Sdílet v aplikaci Galerie pro zobrazení na monitoru.</string>
+     <string name="screen_projection_example_gallery_title">Fotografie a videa</string>
+     <string name="screen_projection_example_game_summary">Zrychlení her umožňuje vysílat hry na externí monitor.</string>
+     <string name="screen_projection_example_game_title">Hry</string>
+     <string name="screen_projection_help">Pomoc</string>
+     <string name="screen_projection_sample_summary">Vysílání dokumentů, her, fotografií a videí</string>
+     <string name="screen_projection_sample_title">Ukázky</string>
+     <string name="screen_projection_title">Vysílat</string>
+     <string name="speaker">Reproduktor</string>
+     <string name="system_print_service_help">O tisku</string>
+     <string name="xiaomi_transfer">Mi Share</string>  
 </resources>
