--- a/Czech/main/MiuiCamera.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiCamera.apk/res/values-cs/strings.xml
@@ -794,4 +794,8 @@ Objekt bude ostrý na rozmazaném pozadí."</string>
     <string name="pref_camera_snap_entry_summary">Podržte tlačítkem pro Snížení hlasitosti pokud je vypnutý displej pro pořízením fotografie</string>
      <string name="accessibility_ultra_pixel_photography_off">%s Ultra HD je vypnuté</string>
      <string name="accessibility_ultra_pixel_photography_on">%s Ultra HD je zapnuté</string>
+     <string name="macro_mode_use_hint_text_body">Použijte Makro režim pro přiblížení malého objektu</string>
+     <string name="macro_mode_use_hint_text_title">Makro</string>
+     <string name="pref_camera_flashmode_entry_back_soft_light">Jemné světlo</string>
+     <string name="recommend_soft_light_tip">Použijte blesk v režimu Jemné světlo</string>	 
 </resources>
